--- a/bee-vote/package.json
+++ b/bee-vote/package.json
@@ -13,8 +13,10 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
